--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.24",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zapier-platform-core": "^17.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
