--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ uploads/
 
 data/
 .vercel
+
+# Google Cloud service account keys
+config/gmail-push-service-account.json
+config/*.json
+config/service-accounts/
