--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:embeddings": "npx ts-node src/embedding/embedding.spec.ts"
+    "test:embeddings": "npx ts-node src/embedding/embedding.spec.ts",
+    "audio:generate": "npx ts-node src/meeting-audio/cli/generate-meeting-audio.ts",
+    "audio:batch": "npx ts-node src/meeting-audio/cli/generate-meeting-audio.ts -b -i guides/transcripts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.50.4",
+    "@elevenlabs/elevenlabs-js": "^2.4.1",
     "@google-cloud/pubsub": "^5.0.0",
     "@langchain/anthropic": "^0.3.20",
     "@langchain/community": "^0.3.43",
@@ -52,12 +55,14 @@
     "class-validator": "^0.14.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
+    "fluent-ffmpeg": "^2.1.3",
     "googleapis": "^149.0.0",
     "joi": "^17.13.3",
     "keyv": "^5.3.3",
     "langchain": "^0.3.25",
     "mongoose": "^8.14.3",
     "nestjs-pino": "^4.4.0",
+    "node-wav": "^0.0.2",
     "openai": "^4.98.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -81,9 +86,11 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/fluent-ffmpeg": "^2.1.25",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
